bug_database_with_UI_iteration0/Bug_Collection/MPI/Bug17/Explanation.txt





The original code had the following syntax error:

* Error message

```
buggy_version.c(21): error: expression must be a modifiable lvalue
          str =  "abcd";        
          ^

compilation aborted for buggy_version.c (code 2)
```

After the aforementioned error is fixed by using the strcpy function in the code, the code compiled but produced run-time erros mentioned below:
```
a?
1 0
bb
2 1
ccc??
3 3
dddd?
4 6
[c455-133.stampede2.tacc.utexas.edu:mpispawn_0][readline] Unexpected End-Of-File on file descriptor 8. MPI process died?
[c455-133.stampede2.tacc.utexas.edu:mpispawn_0][mtpmi_processops] Error while reading PMI socket. MPI process died?
[c455-133.stampede2.tacc.utexas.edu:mpispawn_0][child_handler] MPI process (rank: 0, pid: 75502) terminated with signal 11 -> abort job
[c455-133.stampede2.tacc.utexas.edu:mpirun_rsh][process_mpispawn_connection] mpispawn_0 from node c455-133 aborted: Error while reading a PMI socket (4)
TACC:  MPI job exited with code: 1 
TACC:  Shutdown complete. Exiting.
```
